--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,7 @@
   "extends": ["react-app", "plugin:prettier/recommended"],
   "plugins": ["prettier"],
   "rules": {
-    // "no-console": "error",
+    "no-console": "error",
     "prettier/prettier": "error",
     "import/order": [
       "error",
