--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,6 +4,7 @@
   "rules": {
     "no-console": "error",
     "prettier/prettier": "error",
+    "import/no-cycle": ["error", { "maxDepth": "∞" }],
     "import/order": [
       "error",
       {
