--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -8,7 +8,8 @@
       "@utils/*": ["src/utils/*"],
       "@assets/*": ["src/assets/*"],
       "@entities/*": ["src/entities/*"],
-      "@api/*": ["src/api/*"]
+      "@api/*": ["src/api/*"],
+      "@store/*": ["src/store/*"]
     }
   }
 }
