--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,26 +1,24 @@
-// {
-//   "extends": "./tsconfig.paths.json",
-//   "compilerOptions": {
-//     "target": "es5",
-//     "lib": ["dom", "dom.iterable", "esnext"],
-//     "allowJs": true,
-//     "skipLibCheck": true,
-//     "esModuleInterop": true,
-//     "allowSyntheticDefaultImports": true,
-//     "strict": true,
-//     "forceConsistentCasingInFileNames": true,
-//     "noFallthroughCasesInSwitch": true,
-//     "module": "esnext",
-//     "moduleResolution": "node",
-//     "resolveJsonModule": true,
-//     "isolatedModules": true,
-//     "noEmit": true,
-//     "jsx": "react-jsx"
-//   },
-//   "include": ["src", "src/@types"]
-// }
 {
   "compilerOptions": {
+    "target": "es5",
+    "lib": ["dom", "dom.iterable", "esnext"],
+    "allowJs": true,
+    "skipLibCheck": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "noFallthroughCasesInSwitch": true,
+    "module": "esnext",
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "noEmit": true,
+    "jsx": "react",
+
+    "strictNullChecks": true,
+    "sourceMap": true,
+
     "baseUrl": "src",
     "paths": {
       "@components/*": ["components/*"],
@@ -30,19 +28,7 @@
       "@assets/*": ["assets/*"],
       "@models/*": ["models/*"],
       "@store/*": ["store/*"]
-    },
-    "noEmit": true,
-    "allowJs": true,
-    "sourceMap": true,
-    "strict": true,
-    "strictNullChecks": true,
-    "skipLibCheck": true,
-    "module": "es6",
-    "target": "es6",
-    "moduleResolution": "node",
-    "jsx": "react",
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true
+    }
   },
 
   "include": ["src/**/*"],
